beta исправлена проверка тестов и отображение в личном кабинете

--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -40,7 +40,7 @@
 
   <!-- Тесты -->
   <a class="teacher-only" href="/create-test.html">Создать тест</a>
-  <a href="/results.html" style="font-weight:bold;">Результаты тестов</a>
+  <a href="/result-list.html" style="font-weight:bold;">Результаты тестов</a>
 
   <!-- Группы / факультеты (только преподавателям) -->
   <a class="teacher-only" href="/groups.html" style="font-weight:bold;">Создать группу</a>
